src/test/deca/syntax/valid/test_synt/class_sans_method/class_extends_other_class.deca
// Description:
//    Definit deux classes l'une fille de l'autre.
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//
// Historique:
//    cree le 19/01/2022

class A {

}

class B extends A {

}

{

}
