src/test/deca/syntax/invalid/test_synt/class/declaration_protected_class.deca
// Description:
//    Test de declaration d'une classe avec Protected devant
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: erreur de syntax --> en deca le premier mot dans "class__decl" doit
//                                   être classe --> donc pas de possibilité de mot avant "class" .
//
// Historique:
//    cree le 19/01/2022


 Protected class TheClass
{
    int x ;
}

{

}